# aibootcamp_20260326

./: .env.example  .gitignore  Dockerfile  README.md  cursor-mcp-rag-db.example.json  pyproject.toml  start-app.bat  start-app.ps1
.cursor/rules/: rag-frontend-sk-ci.mdc  rag-multi-agent.mdc
docs/: AICRMplanning.md  README.md
docs/env/: ai-models.md  azure-openai.example.env
docs/guides/: assignment-alignment.md
docs/prd/: AICRM_prd.md  sample-prd.md
docs/standards/: sample-development-standard.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: AICrm.tsx  App.tsx  index.css
mcp_servers/: __init__.py
mcp_servers/rag_db/: __init__.py  chunking.py  server.py
rag_agent/: __init__.py  config.py  llm_client.py  mcp_client.py  orchestrator.py  state.py
rag_agent/agents/: __init__.py  query_planner.py  retrieval.py  synthesis.py  verifier.py
rag_agent/api/: crm.py  main.py
rag_agent/crm/: __init__.py  action_seed.py  action_templates.py  agent_validate.py  assistant.py  companies_data.py  db.py  file_extract.py  langgraph_orch.py  mapping.py  models.py  orchestrate.py  probability.py  schemas.py  seed.py  stage_guides.py
rag_agent/crm/agents/: __init__.py  activity_mapping.py  activity_recommendation.py  company_info.py  llm.py  opp_rep_mapping.py  opportunity_info.py  registry.py  (+2 more)
scripts/: move-assignment-folder-to-english.ps1  publish-to-github.ps1  run-api.ps1  run-frontend.ps1  start-dev.bat  start-dev.ps1  verify_rag_mcp.py
standards/: rag-mcp-and-db.mdc  rag-project.common.mdc
